tests/neg/infer-poly.stk
fun test1[X, Y <: X](x: X, y: Y): X = y

// Check that type inference of result type does not discard errors
fun main =
  test1 5 false // error

  val g = x => x   // error
